tests/error/enum_errors/use_enum_class4.err
Error: Attribute not found (at $FILE:17:18)
   | 
15 | @guppy
16 | def fun() -> str:
17 |     return MyEnum.method()
   |                   ^^^^^^ `MyEnum` has no variant `method`

Guppy compilation failed due to 1 previous error
